Update .env.example for Cloudflare D1 Database
Removed Airtable configuration and added Cloudflare D1 Database details.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,6 @@
-# Airtable Configuration
-# Get your API key from: https://airtable.com/account
-AIRTABLE_API_KEY=your_airtable_api_key_here
+# Cloudflare D1 Database
+# Configure no wrangler.toml ou no Cloudflare Dashboard
+# DB binding é automático via wrangler.toml
 
-# Get your base ID from the Airtable API documentation or URL
-# Example: https://airtable.com/appXXXXXXXXXXXXXX/...
-AIRTABLE_BASE_ID=your_airtable_base_id_here
-
-# Table names in your Airtable base
-AIRTABLE_ITEMS_TABLE=Items
-AIRTABLE_RESERVATIONS_TABLE=Reservations
-AIRTABLE_MAINTENANCE_TABLE=Maintenance
-AIRTABLE_FINANCE_TABLE=Finance
+# Node Version
+NODE_VERSION=18
